--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,26 +2,61 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+img {
+  max-height: 100%;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+input,
+textarea,
+select {
+  @apply border border-gray-200 rounded-sm px-1 w-full py-2 px-3;
+  @apply mb-2;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+input:focus,
+select:focus,
+textarea:focus {
+  @apply border-blue-900;
+}
+
+h1 {
+  @apply text-gray-800 mb-4 text-xl;
+}
+
+label {
+  @apply text-gray-800 text-sm;
+}
+
+.btn-primary {
+  @apply bg-primary text-white px-4 rounded-md py-1 shadow-sm;
+}
+
+table.basic {
+  @apply w-full bg-white rounded-sm shadow-lg;
+}
+
+table.basic thead tr th {
+  @apply text-sm text-gray-600 uppercase border-b border-gray-200 px-4 py-2;
+}
+
+table.basic tr td,
+table.basic tr th {
+  @apply px-4 py-1;
+}
+
+table.basic a {
+  @apply text-white px-4 rounded-md text-white text-sm py-1 px-2 rounded-md gap-1 mr-1 inline-flex text-sm py-1;
+}
+
+.btn-default,
+.btn-red {
+  @apply px-4 py-1 rounded-md;
+}
+
+.btn-red {
+  @apply bg-red-500 text-white px-4 py-1 shadow-sm rounded-sm;
+}
+
+.btn-default {
+  @apply bg-gray-600 text-white px-4 py-1 rounded-sm shadow-sm;
 }
